# psp-stats

./: .buildinfo  .gitignore  Cargo.toml  LICENSE  cost.html  genindex.html  index.html  objects.inv  pixi.toml  pyproject.toml  references.html  sampling.html  search.html  searchindex.js  usage.html
.github/workflows/: CI.yml  sphinx.yml
_sources/: cost.rst.txt
_sources/api/: rmsd.rst.txt
api/: correlation.html  rmsd.html  sample_solutions.html  stats.html
docs/source/: conf.py  index.rst  references.rst  usage.ipynb
docs/source/.ipynb_checkpoints/: test-checkpoint.ipynb  usage-checkpoint.ipynb
docs/source/api/: sample_solutions.rst  stats.rst
sphinx_doc/source/: index.rst  intro.md  sampling.rst
sphinx_doc/source/api/: correlation.rst
src/: cost.rs  dimmerize.rs  lib.rs  minimize.rs  rmsd.rs  sampling.rs
